update package infos

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dwflux",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "dawee's Flux",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/dawee/flux.git"
   },
-  "author": "",
+  "author": "David Corticchiato",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/dawee/flux/issues"
