--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "dwflux",
   "version": "0.0.1",
-  "description": "dawee's Flux",
+  "description": "ES6 Flux lib based on facebook Emitter/Dispatcher",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "make build"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,10 @@
     "fbemitter": "2.0.2",
     "flux": "2.1.1",
     "hat": "0.0.3"
+  },
+  "devDependencies": {
+    "babel-cli": "6.8.0",
+    "babel-core": "6.8.0",
+    "babel-preset-es2015": "6.6.0"
   }
 }
