do not support es5, node >= 6.2.0

--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.0.3",
   "description": "ES6 Flux lib based on facebook Emitter/Dispatcher",
   "main": "index.js",
-  "scripts": {
-    "postinstall": "babel --presets es2015 lib -q -d ."
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dawee/flux.git"
@@ -14,6 +11,9 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/dawee/flux/issues"
+  },
+  "engines" : {
+    "node" : ">=6.2.0"
   },
   "homepage": "https://github.com/dawee/flux#readme",
   "dependencies": {
