--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.3",
   "description": "ES6 Flux lib based on facebook Emitter/Dispatcher",
   "main": "index.js",
+  "scripts": {
+    "test": "mocha"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dawee/flux.git"
@@ -12,8 +15,8 @@
   "bugs": {
     "url": "https://github.com/dawee/flux/issues"
   },
-  "engines" : {
-    "node" : ">=6.2.0"
+  "engines": {
+    "node": ">=6.2.0"
   },
   "homepage": "https://github.com/dawee/flux#readme",
   "dependencies": {
@@ -24,6 +27,7 @@
   "devDependencies": {
     "babel-cli": "6.8.0",
     "babel-core": "6.8.0",
-    "babel-preset-es2015": "6.6.0"
+    "babel-preset-es2015": "6.6.0",
+    "mocha": "2.5.3"
   }
 }
