--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/dawee/dispersive#readme",
   "dependencies": {
+    "clone": "1.0.2",
     "fbemitter": "2.0.2",
     "flux": "2.1.1",
     "hat": "0.0.3"
