--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
+    "eslint": "3.0.0",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-plugin-import": "1.10.1",
+    "eslint-plugin-jsx-a11y": "1.5.3",
+    "eslint-plugin-react": "5.2.2",
     "mocha": "2.5.3",
     "sinon": "1.17.4"
   }
