--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prepublish": "babel lib --out-dir es5/lib",
+    "pretest": "eslint lib",
     "test": "mocha"
   },
   "repository": {
@@ -35,7 +36,7 @@
     "chai": "3.5.0",
     "eslint": "3.0.0",
     "eslint-config-airbnb": "9.0.1",
-    "eslint-plugin-import": "1.10.1",
+    "eslint-plugin-import": "1.10.0",
     "eslint-plugin-jsx-a11y": "1.5.3",
     "eslint-plugin-react": "5.2.2",
     "mocha": "2.5.3",
