--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dispersive",
-  "version": "0.3.12-alpha",
+  "version": "0.3.13",
   "description": "Storage management inspired by the Flux philosophy",
   "main": "index.js",
   "scripts": {
