--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dispersive",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "Storage management inspired by the Flux philosophy",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "babel-cli": "6.10.1",
+    "babel-plugin-transform-runtime": "6.15.0",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-0": "6.5.0",
     "chai": "3.5.0",
