expand compat for es<5

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["es2015"],
-  "plugins": ["transform-runtime"]
+  "plugins": [
+    "transform-runtime",
+    "transform-es3-member-expression-literals",
+    "transform-es3-property-literals"
+  ]
 }
