--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dispersive",
-  "version": "0.6.1",
+  "version": "0.6.4",
   "description": "Storage management inspired by the Flux philosophy",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "babel-cli": "6.10.1",
     "babel-plugin-transform-es3-member-expression-literals": "6.8.0",
     "babel-plugin-transform-es3-property-literals": "6.8.0",
+    "babel-plugin-transform-proto-to-assign": "6.9.0",
     "babel-plugin-transform-runtime": "6.15.0",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-0": "6.5.0",
