--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "dispersive",
-  "version": "0.6.8",
+  "version": "0.7.0",
   "description": "Storage management inspired by the Flux philosophy",
   "main": "index.js",
   "scripts": {
     "prepublish": "babel lib --out-dir es5/lib",
     "pretest": "eslint lib",
-    "test": "mocha"
+    "test": "mocha",
+    "es5-test": "DISPERSIVE_ECMA=5 mocha --compilers js:babel-register --require babel-polyfill"
   },
   "repository": {
     "type": "git",
@@ -37,8 +38,10 @@
     "babel-plugin-transform-es3-property-literals": "6.8.0",
     "babel-plugin-transform-proto-to-assign": "6.9.0",
     "babel-plugin-transform-runtime": "6.15.0",
+    "babel-polyfill": "6.9.1",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-0": "6.5.0",
+    "babel-register": "6.16.3",
     "chai": "3.5.0",
     "eslint": "3.0.0",
     "eslint-config-airbnb": "9.0.1",
