--- a/examples/imdb/package.json
+++ b/examples/imdb/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "babel-polyfill": "6.16.0",
-    "dispersive": "0.7.2",
+    "dispersive": "../..",
+    "moment": "2.15.1",
+    "qs": "6.2.1",
     "react": "15.3.2",
     "react-dom": "15.3.2",
     "superagent": "2.3.0"
