--- a/examples/movies/package.json
+++ b/examples/movies/package.json
@@ -20,6 +20,7 @@
     "qs": "6.2.1",
     "react": "15.3.2",
     "react-dom": "15.3.2",
+    "react-visibility-sensor": "3.4.0",
     "superagent": "2.3.0"
   },
   "devDependencies": {
