--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "dispersive",
   "version": "0.7.2",
   "description": "Storage management inspired by the Flux philosophy",
-  "main": "index.js",
+  "main": "lib",
   "scripts": {
-    "prepublish": "babel lib --out-dir es5/lib",
-    "pretest": "eslint lib",
-    "test": "mocha",
-    "es5-test": "DISPERSIVE_ECMA=5 mocha --compilers js:babel-register --require babel-polyfill"
+    "prepublish": "make re",
+    "pretest": "make lint",
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -23,14 +22,14 @@
   },
   "homepage": "https://github.com/dawee/dispersive#readme",
   "dependencies": {
-    "babel-core": "6.10.4",
-    "babel-polyfill": "6.9.1",
     "clone": "2.0.0",
     "fbemitter": "2.0.2",
     "flux": "2.1.1",
     "hat": "0.0.3"
   },
   "devDependencies": {
+    "babel-core": "6.10.4",
+    "babel-polyfill": "6.9.1",
     "babel-cli": "6.10.1",
     "babel-plugin-transform-es2015-block-scoping": "6.15.0",
     "babel-plugin-transform-es2015-classes": "6.14.0",
@@ -38,7 +37,6 @@
     "babel-plugin-transform-es3-property-literals": "6.8.0",
     "babel-plugin-transform-proto-to-assign": "6.9.0",
     "babel-plugin-transform-runtime": "6.15.0",
-    "babel-polyfill": "6.9.1",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.16.3",
