--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Storage management inspired by the Flux philosophy",
   "main": "lib",
   "scripts": {
-    "prepublish": "make re",
-    "pretest": "make lint",
+    "prepublish": "make validate",
     "test": "make test"
   },
   "repository": {
