--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dispersive",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "Storage management inspired by the Flux philosophy",
   "main": "lib",
   "scripts": {
@@ -21,21 +21,22 @@
   },
   "homepage": "https://github.com/dawee/dispersive#readme",
   "dependencies": {
+    "babel-runtime": "6.18.0",
     "clone": "2.0.0",
     "fbemitter": "2.0.2",
     "flux": "2.1.1",
     "hat": "0.0.3"
   },
   "devDependencies": {
-    "babel-core": "6.10.4",
-    "babel-polyfill": "6.9.1",
     "babel-cli": "6.10.1",
+    "babel-core": "6.10.4",
     "babel-plugin-transform-es2015-block-scoping": "6.15.0",
     "babel-plugin-transform-es2015-classes": "6.14.0",
     "babel-plugin-transform-es3-member-expression-literals": "6.8.0",
     "babel-plugin-transform-es3-property-literals": "6.8.0",
     "babel-plugin-transform-proto-to-assign": "6.9.0",
     "babel-plugin-transform-runtime": "6.15.0",
+    "babel-polyfill": "6.9.1",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.16.3",
