--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dispersive",
-  "version": "0.15.0",
+  "version": "0.15.1",
   "description": "Storage management inspired by the Flux philosophy",
   "main": "lib",
   "scripts": {
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/dawee/dispersive#readme",
   "dependencies": {
-    "babel-runtime": "6.18.0",
+    "babel-runtime": "^6.18.0",
     "clone": "2.0.0",
     "fbemitter": "2.0.2",
     "flux": "2.1.1",
@@ -35,7 +35,7 @@
     "babel-plugin-transform-es3-member-expression-literals": "6.8.0",
     "babel-plugin-transform-es3-property-literals": "6.8.0",
     "babel-plugin-transform-proto-to-assign": "6.9.0",
-    "babel-plugin-transform-runtime": "6.15.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "6.9.1",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-0": "6.5.0",
