--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.16.3",
     "chai": "3.5.0",
+    "docdash": "0.4.0",
     "eslint": "3.0.0",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-import": "1.10.0",
