--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "airbnb",
   "rules": {
+    "no-shadow": "off",
     "object-curly-spacing": ["error", "never"],
     "consistent-return": "off",
     "no-param-reassign": "off",
