--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/dawee/dispersive-core/issues"
   },
-  "homepage": "https://github.com/dawee/dispersive-core#readme"
+  "homepage": "https://github.com/dawee/dispersive-core#readme",
+  "dependencies": {
+    "immutable": "3.8.1"
+  },
+  "devDependencies": {
+    "chai": "3.5.0",
+    "mocha": "3.2.0"
+  }
 }
