--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "mocha": "3.2.0"
   }
 }
