--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "mocha": "3.2.0"
+    "mocha": "3.2.0",
+    "sinon": "1.17.7"
   }
 }
