--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,8 @@
 {
   "extends": "airbnb",
   "rules": {
-    "no-shadow": "off",
     "object-curly-spacing": ["error", "never"],
     "consistent-return": "off",
-    "no-underscore-dangle": "off",
-    "max-len": ["error", {
-      "ignoreComments": true,
-      "code": 100
-    }]
+    "no-restricted-syntax": "off"
   }
 }
