--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dispersive",
-  "version": "0.18.1",
+  "version": "1.0.1",
   "description": "Storage management inspired by the Flux philosophy",
   "main": "lib",
   "scripts": {
@@ -16,15 +16,10 @@
   "bugs": {
     "url": "https://github.com/dawee/dispersive/issues"
   },
-  "engines": {
-    "node": ">=6.0.0"
-  },
   "homepage": "https://github.com/dawee/dispersive#readme",
   "dependencies": {
     "babel-runtime": "^6.18.0",
-    "clone": "2.0.0",
-    "fbemitter": "2.0.2",
-    "hat": "0.0.3"
+    "dispersive-core": "1.0.1"
   },
   "devDependencies": {
     "babel-cli": "6.10.1",
