--- a/package.json
+++ b/package.json
@@ -34,15 +34,7 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.16.3",
-    "chai": "3.5.0",
-    "docdash": "0.4.0",
-    "eslint": "3.0.0",
-    "eslint-config-airbnb": "9.0.1",
-    "eslint-plugin-import": "1.10.0",
-    "eslint-plugin-jsx-a11y": "1.5.3",
-    "eslint-plugin-react": "5.2.2",
-    "mocha": "2.5.3",
-    "sinon": "1.17.4"
+    "mkdirp": "0.5.1"
   },
   "babel": {
     "presets": [
