--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Storage management inspired by the Flux philosophy",
   "main": "lib",
   "scripts": {
-    "prepublish": "make validate",
-    "test": "make validate"
+    "prepublish": "./script/export-lib"
   },
   "repository": {
     "type": "git",
@@ -23,7 +22,7 @@
   },
   "devDependencies": {
     "babel-cli": "6.10.1",
-    "babel-core": "6.10.4",
+    "babel-core": "6.17.0",
     "babel-plugin-transform-es2015-block-scoping": "6.15.0",
     "babel-plugin-transform-es2015-classes": "6.14.0",
     "babel-plugin-transform-es3-member-expression-literals": "6.8.0",
@@ -32,6 +31,7 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "6.9.1",
     "babel-preset-es2015": "6.9.0",
+    "babel-preset-latest": "6.22.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.16.3",
     "mkdirp": "0.5.1"
