--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,10 @@
 {
-  "presets": ["es2015"],
+  "presets": [
+    "es2017",
+    "es2016",
+    "es2015",
+  ],
   "plugins": [
-    "transform-es3-member-expression-literals",
-    "transform-es3-property-literals",
     ["transform-runtime", {
       "polyfill": false,
       "regenerator": true
