--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dispersive",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Storage management inspired by the Flux philosophy",
   "main": "lib",
   "scripts": {
-    "prepublish": "./script/export-lib"
+    "test": "make test",
+    "prepublish": "make lib"
   },
   "repository": {
     "type": "git",
@@ -17,29 +18,22 @@
   },
   "homepage": "https://github.com/dawee/dispersive#readme",
   "dependencies": {
-    "babel-runtime": "^6.18.0",
-    "dispersive-core": "1.0.1"
+    "fbemitter": "2.1.1",
+    "immutable": "3.8.1",
+    "ulid": "0.1.0",
+    "babel-runtime": "^6.18.0"
   },
   "devDependencies": {
-    "babel-cli": "6.10.1",
-    "babel-core": "6.17.0",
-    "babel-plugin-transform-es2015-block-scoping": "6.15.0",
-    "babel-plugin-transform-es2015-classes": "6.14.0",
-    "babel-plugin-transform-es3-member-expression-literals": "6.8.0",
-    "babel-plugin-transform-es3-property-literals": "6.8.0",
-    "babel-plugin-transform-proto-to-assign": "6.9.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "6.9.1",
-    "babel-preset-es2015": "6.9.0",
+    "babel-cli": "6.23.0",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-latest": "6.22.0",
-    "babel-preset-stage-0": "6.5.0",
-    "babel-register": "6.16.3",
-    "mkdirp": "0.5.1"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-0"
-    ]
+    "chai": "3.5.0",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "mocha": "3.2.0",
+    "sinon": "1.17.7"
   }
 }
