--- a/examples/react-instagram/package.json
+++ b/examples/react-instagram/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.3"
   },
   "dependencies": {
+    "dispersive": "1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
