--- a/examples/react-instagram/package.json
+++ b/examples/react-instagram/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "dispersive": "1.0.0",
     "react": "^15.4.2",
+    "react-dispersive": "1.0.1",
     "react-dom": "^15.4.2"
   },
   "scripts": {
