--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,6 @@
   "extends": "airbnb",
   "rules": {
     "no-restricted-syntax": "off",
-    "class-methods-use-this": "off",
-    "no-empty-function": "off"
+    "class-methods-use-this": "off"
   }
 }
