remove class-method-use-this filter

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
   "extends": "airbnb",
   "rules": {
-    "no-restricted-syntax": "off",
-    "class-methods-use-this": "off"
+    "no-restricted-syntax": "off"
   }
 }
